Fixed errors after adding SEO stuff

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <meta name="description" content="Time 4 U Spa in Lehi, Utah offers traditional healing techniques including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs. Book your appointment today.">
     <!-- rest of your head content -->
 
-    <meta name="description" content="[your meta description]">
-
     <!-- Add this structured data -->
     <script type="application/ld+json">
     {
@@ -108,8 +106,6 @@
         ]
     }
     }
-    </script>
-
     </script>
 
     <!-- Add these SEO meta tags -->
@@ -839,9 +835,8 @@
         <main class="hero">
             <h1 class="hero-title text-2xl">Traditional Healing Techniques & Skincare</h1>
             <p class="hero-description text-sm">
-                <p class="hero-description text-sm">
-                    Located in Lehi, Utah, each treatment is designed to work with your body's natural healing ability to provide lasting benefits for Utah County residents.
-                </p>
+                Located in Lehi, Utah, each treatment is designed to work with your body's natural healing ability to provide lasting benefits for Utah County residents.
+            </p>
 
             <div class="cta-section mb-8">
                 <div class="cta-buttons">
@@ -864,47 +859,47 @@
         </main>
 
         <section class="hero">
-            <h3 class="section-title text-xl mb-6">Professional services we offer:</h3>
+            <h2 class="section-title text-xl mb-6">Professional services we offer:</h2>
             <div class="services-grid">
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19757215&pId=2521139" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/accupressure.png')" aria-label="Acupressure massage therapy"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Accupressure</div>
+                        <h3 class="service-title text-sm">Accupressure</h3>
                         <div class="service-desc text-xs">Ancient pressure point therapy for pain relief and wellness</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/gua-sha.png')" aria-label="Gua sha traditional healing technique"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Gua Sha</div>
+                        <h3 class="service-title text-sm">Gua Sha</h3>
                         <div class="service-desc text-xs">Traditional scraping technique to improve circulation</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/ashiatsu.png')" aria-label="Ashiatsu barefoot massage therapy"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Ashiatsu</div>
+                        <h3 class="service-title text-sm">Ashiatsu</h3>
                         <div class="service-desc text-xs">Deep tissue massage using barefoot pressure techniques</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667425&pId=2521139&cartId=c479f300-4359-460c-ada4-f14867f60b1e" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/cupping-therapy.png')" aria-label="Cupping therapy treatment"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Cupping therapy</div>
+                        <h3 class="service-title text-sm">Cupping therapy</h3>
                         <div class="service-desc text-xs">Therapeutic technique to release muscle tension</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19747662" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/facial.png')" aria-label="Professional facial skincare treatment"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Facial</div>
+                        <h3 class="service-title text-sm">Facial</h3>
                         <div class="service-desc text-xs">Customized skincare treatment to cleanse, nourish and rejuvenate</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?cartId=aeb0f375-3ceb-456b-83eb-c77c365bc2c5" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/body-scrub.png')" aria-label="Exfoliating body scrub treatment"></div>
                     <div class="service-content">
-                        <div class="service-title text-sm">Body scrub</div>
+                        <h3 class="service-title text-sm">Body scrub</h3>
                         <div class="service-desc text-xs">Exfoliating treatment to remove dead skin and reveal smooth, glowing skin</div>
                     </div>
                 </a>
