Additional fixes / SEO

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
     <meta name="twitter:description" content="Traditional healing techniques including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs in Lehi, Utah.">
     <meta name="twitter:image" content="https://time4uspa.com/assets/images/hero-image.png">
 
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"></noscript>
+
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- Standard favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -823,7 +826,7 @@
         <!-- Header -->
         <header class="header full-width">
             <div class="content-wrapper p-3 px-4">
-                <img src="assets/logo-green.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="logo">
+                <img src="assets/logo-green.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="logo" width="120" height="32">
                 <div class="header-buttons">
                     <a href="tel:3852776716" class="btn btn-call">Call (385) 277-6716</a>
                     <a href="sms:3852776716" class="btn btn-text">Text</a>
@@ -854,7 +857,7 @@
             </div>
 
             <div class="hero-image">
-                <img src="assets/images/hero-image.png" alt="Relaxing spa treatment room at Time 4 U Spa in Lehi Utah">
+                <img src="assets/images/hero-image.png" alt="Relaxing spa treatment room at Time 4 U Spa in Lehi Utah" loading="lazy">
             </div>
         </main>
 
@@ -914,7 +917,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo-section">
-                <img src="assets/logo-white.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="footer-logo">
+                <img src="assets/logo-white.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="footer-logo" width="120" height="40">
                 <div class="footer-tagline text-sm">Lehi's Premier Massage & Esthetics Spa</div>
                 <div class="footer-hours text-sm">Open every day from 9AM - 9PM</div>
             </div>
