--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                 <h4 class="text-sm">Contact</h4>
                 <div class="footer-section-content">
                     <div style="margin-bottom: 8px;"><a href="tel:3852776716" class="text-base">Call us</a></div>
-                    <div style="margin-bottom: 8px;"><a href="mailto:contact@timespa.com" class="text-base">Email us</a></div>
+                    <div style="margin-bottom: 8px;"><a href="mailto:timeforuspa2025@gmail.com" class="text-base">Email us</a></div>
                     <div><a href="https://maps.apple.com/?q=785+E+200+S,+Ste.+5,+Lehi,+UT+84043" class="text-base">785 E 200 S, Ste. 5<br>Lehi, UT 84043</a></div>
                 </div>
             </div>
